--- a/_notices/2022-10-12-세번째.md
+++ b/_notices/2022-10-12-세번째.md
@@ -16,3 +16,10 @@ test code
 [test][test]
 
 [test]: https://jekyllrb.com/docs/home
+
+
+|제목|내용|설명|
+|------|---|---|
+|테스트1|**테스트2**|테스트3|
+|테스트1|테스트2|테스트3|
+|테스트1|**테스트2**|테스트3|
